# 2S-ESS

./: .gitignore  CMakeLists.opt  CMakeLists.reg  CMakeLists.txt  README  README.md
TEST/: makefile  makefile_opt  test_opt.f90  test_regular.f90  test_regular_lin.f90
TEST/mod/: fo_geometry_generic_m.mod  fo_geometry_routines_m.mod  fo_scalarss_rtcalcs_i_m.mod  fo_scalarss_spherfuncs_m.mod  fo_ssgeometry_master_m.mod  twostream_bvproblem_m.mod  twostream_inputs_m.mod  twostream_intensity_m.mod  twostream_master_m.mod  twostream_miscsetups_m.mod  twostream_solutions_m.mod  twostream_taylor_m.mod  twostream_thermalsup_m.mod  twostream_writemodules_m.mod
TEST/mod_opt/: fo_geometry_generic_ps_m.mod  fo_geometry_routines_obs_eps_m.mod  fo_geometry_routines_obs_pp_m.mod  fo_geometry_routines_obs_rps_m.mod  fo_scalarss_rtcalcs_i_eps_m.mod  fo_scalarss_rtcalcs_i_pp_m.mod  fo_scalarss_rtcalcs_i_rps_m.mod  fo_scalarss_spherfuncs_optimized_m.mod  fo_ssgeometry_inputs_m.mod  fo_ssgeometry_master_obs_eps_m.mod  fo_ssgeometry_master_obs_pp_m.mod  fo_ssgeometry_master_obs_rps_m.mod  twostream_brdf_supplement_solar_obs_m.mod  twostream_brdfkernels_m.mod  twostream_bvproblem_m.mod  twostream_converge_obs_m.mod  twostream_fluxes_m.mod  twostream_geometry_m.mod  twostream_geometry_solar_obs_m.mod  twostream_inputs_solar_obs_m.mod  twostream_intensity_solar_obs_m.mod  twostream_master_solar_obs_m.mod  twostream_miscsetups_m.mod  twostream_miscsetups_solar_obs_m.mod  twostream_miscsetups_solar_obs_pp_m.mod  twostream_sleave_routines_m.mod  twostream_sleave_supplement_m.mod  twostream_solutions_m.mod  twostream_solutions_solar_m.mod  twostream_taylor_m.mod  twostream_writemodules_solar_obs_m.mod
sourcecode/2stream_2p4_feb15/: 2stream_bvproblem.f90  2stream_external_calc.F90  2stream_intensity.f90  2stream_lcs_master.f90  2stream_lps_master.f90  2stream_lssl_sleave_supplement.f90  2stream_master.f90  2stream_master_test.f90  2stream_sleave_supplement.f90
sourcecode/2stream_2p4_optimized/: 2stream_Taylor_optimized.f90  2stream_bvproblem_optimized.f90  2stream_fluxes.f90  2stream_geometry_optimized.f90  2stream_miscsetups_optimized.f90  2stream_sleave_supplement_optimized.f90  2stream_solutions_optimized.f90  2stream_thermalsup_optimized.f90
sourcecode/2stream_2p4_optimized/solar/: 2stream_solutions_solar.f90
sourcecode/2stream_2p4_optimized/solar/lat/: 2stream_auxgeom_lat.f90  2stream_brdf_supplement_optimized.f90  2stream_geometry_optimized.f90  2stream_inputs.f90  2stream_intensity_optimized.f90  2stream_master_optimized.f90  2stream_writemodules_optimized.f90
sourcecode/2stream_2p4_optimized/solar/obs/: 2stream_brdf_supplement_solar_obs.f90  2stream_converge_obs.f90  2stream_geometry_solar_obs.f90  2stream_inputs_solar_obs.f90  2stream_intensity_solar_obs.f90  2stream_master_solar_obs.f90  2stream_miscsetups_solar_obs.f90  2stream_miscsetups_solar_obs_pp.f90  2stream_writemodules_solar_obs.f90
sourcecode/2stream_2p4_optimized/thermal/: 2stream_brdf_supplement_thermal.f90  2stream_geometry_thermal.f90  2stream_inputs_thermal.f90  2stream_intensity_thermal.f90  2stream_master_thermal.f90  2stream_solutions_thermal.f90  2stream_writemodules_thermal.f90
sourcecode/FO_1p4_optimized/: FO_DTgeometry_inputs.f90  FO_DTgeometry_master_eps.f90  FO_DTgeometry_master_pp_rps.f90  FO_SSgeometry_inputs.f90  FO_SSgeometry_master_obs_eps.f90  FO_SSgeometry_master_obs_pp.f90  FO_SSgeometry_master_obs_rps.f90  FO_ScalarSS_RTCalcs_I_eps.f90  FO_ScalarSS_RTCalcs_I_pp.f90  FO_ScalarSS_RTCalcs_I_rps.f90  FO_ScalarSS_Spherfuncs_optimized.f90  FO_Thermal_RTCalcs_I_eps.f90  FO_Thermal_RTCalcs_I_pp_rps.f90  FO_geometry_Generic_ps.f90  FO_geometry_Routines_obs_eps.f90  FO_geometry_Routines_obs_pp.f90  FO_geometry_Routines_obs_rps.f90  FO_geometry_Routines_thermal_eps.f90
sourcecode/FO_1p4_sourcecode/: FO_SSgeometry_master.f90  FO_ScalarSS_RTCalcs_ILCS.f90  FO_ScalarSS_RTCalcs_ILPS.f90  FO_Thermal_RTCalcs_ILBBF.f90  FO_Thermal_RTCalcs_ILCS.f90  FO_Thermal_RTCalcs_ILCSB.f90  FO_Thermal_RTCalcs_ILPS.f90
